--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         </activity>
         <activity android:name=".activities.TimelineActivity" />
         <activity android:name=".activities.TweetDetailsActivity" />
-        <activity android:name=".activities.ProfileActivity"></activity>
+        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.UserListActivity"></activity>
     </application>
 
 </manifest>
