--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity android:name=".activities.TimelineActivity" />
         <activity android:name=".activities.TweetDetailsActivity" />
         <activity android:name=".activities.ProfileActivity" />
-        <activity android:name=".activities.UserListActivity"></activity>
+        <activity android:name=".activities.UserListActivity" />
+        <activity android:name=".activities.SearchResultsActivity"></activity>
     </application>
 
 </manifest>
